finished landscapes and squashed blank video list bug

--- a/app/src/main/res/layout-land/fragment_channel.xml
+++ b/app/src/main/res/layout-land/fragment_channel.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginTop="24dp"
-    android:layout_marginRight="16dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginRight="4dp"
     tools:context=".ChannelFragment">
 
     <android.support.v7.widget.RecyclerView
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark"
-        android:paddingTop="22dp"
-        android:paddingBottom="20dp"
+        android:orientation="horizontal"
         tools:layout_editor_absoluteX="-67dp"
         tools:layout_editor_absoluteY="270dp" />
 
