--- a/app/src/main/res/layout/fragment_exoplayer.xml
+++ b/app/src/main/res/layout/fragment_exoplayer.xml
@@ -10,10 +10,10 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/videoFullScreenPlayer"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="240dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="#A6000000"
         app:layout_constraintBottom_toTopOf="@+id/exoviewcomments"
@@ -21,25 +21,10 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:player_layout_id="@layout/exo_simple_player_view"
         app:repeat_toggle_modes="none"
         app:show_timeout="45000"
         app:surface_type="texture_view" />
-
-    <ScrollView
-        android:id="@+id/scrollView3"
-        android:layout_width="0dp"
-        android:layout_height="414dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.625"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/videoview">
-
-    </ScrollView>
 
     <WebView
         android:id="@+id/exoviewcomments"
@@ -52,8 +37,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/scrollView3"
-        app:layout_constraintTop_toTopOf="@+id/scrollView3">
+        app:layout_constraintTop_toTopOf="@+id/scrollView3"
+        app:layout_constraintVertical_bias="1.0">
 
     </WebView>
+
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/videoFullScreenPlayer">
+
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
