--- a/app/src/main/res/layout-land/channellist.xml
+++ b/app/src/main/res/layout-land/channellist.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="240dp"
+    android:layout_height="match_parent"
     android:layout_marginBottom="5dp"
     android:background="@color/colorPrimaryDark"
     cardview:cardCornerRadius="2dp"
@@ -12,13 +12,13 @@
     <RelativeLayout
         android:id="@+id/ChannelRecView"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="match_parent"
         android:background="#609C27B0">
 
         <ImageView
             android:id="@+id/channelthumbnail"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="240dp"
+            android:layout_height="180dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="false"
@@ -27,21 +27,6 @@
             android:background="#659C27B0"
             android:scaleType="fitXY" />
 
-        <TextView
-            android:id="@+id/channelName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/channel_description"
-            android:layout_alignEnd="@+id/channel_description"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="100dp"
-            android:maxLines="3"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="#444"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
@@ -49,20 +34,10 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="109dp"
+            android:layout_marginTop="361dp"
+            android:layout_marginEnd="-1dp"
             android:layout_marginBottom="0dp"
             android:text="Unsubscribe" />
-
-        <TextView
-            android:id="@+id/channel_property_description"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="20dp"
-            android:autoLink="web|email"/>
-
 
 
         <ImageView
@@ -71,12 +46,31 @@
             android:layout_height="28dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="-1dp"
-            android:layout_marginTop="102dp"
+            android:layout_marginStart="194dp"
+            android:layout_marginTop="0dp"
             android:elevation="200dp"
             android:visibility="visible" />
 
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/channelName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:maxLines="3"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textColor="#444"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/channel_property_description"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="200dp"
+        android:autoLink="web|email" />
 
 </android.support.v7.widget.CardView>
