--- a/app/src/main/res/layout-land/fragment_channel_properties.xml
+++ b/app/src/main/res/layout-land/fragment_channel_properties.xml
@@ -103,11 +103,11 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/channel_description"
+                android:id="@+id/channel_property_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="8dp"
                 android:autoLink="web|email"
                 android:background="#FFFFFF"
                 android:paddingLeft="4dp"
