--- a/app/src/main/res/layout/fragment_webviewplayer.xml
+++ b/app/src/main/res/layout/fragment_webviewplayer.xml
@@ -9,10 +9,8 @@
 
     <WebView
         android:id="@+id/webviewplayer"
-        android:layout_width="408dp"
-        android:layout_height="291dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/scrollView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -21,28 +19,25 @@
 
     <ScrollView
         android:id="@+id/scrollView3"
-        android:layout_width="411dp"
-        android:layout_height="414dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/videoview">
+        app:layout_constraintTop_toTopOf="@+id/guideline">
 
     </ScrollView>
 
     <WebView
         android:id="@+id/webviewcomments"
-        android:layout_width="389dp"
-        android:layout_height="375dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/scrollView3">
+        app:layout_constraintStart_toStartOf="@+id/scrollView3"
+        app:layout_constraintTop_toTopOf="@+id/scrollView3">
 
     </WebView>
 
@@ -51,6 +46,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="303dp" />
+        app:layout_constraintGuide_begin="240dp" />
 
 </android.support.constraint.ConstraintLayout>
