--- a/app/src/main/res/layout/channellist.xml
+++ b/app/src/main/res/layout/channellist.xml
@@ -29,12 +29,13 @@
 
         <TextView
             android:id="@+id/channelName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/channel_description"
-            android:layout_alignEnd="@+id/channel_description"
+            android:layout_alignEnd="@+id/channel_property_description"
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
+            android:layout_marginLeft="120dp"
             android:layout_marginBottom="100dp"
             android:maxLines="3"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -55,14 +56,14 @@
 
         <TextView
             android:id="@+id/channel_property_description"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="20dp"
-            android:autoLink="web|email"/>
-
+            android:layout_toEndOf="@+id/channelthumbnail"
+            android:autoLink="web|email" />
 
 
         <ImageView
