--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -14,8 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="1dp"
+            android:layout_height="match_parent"
             android:layout_marginRight="4dp"
             android:orientation="vertical">
 
@@ -30,8 +29,7 @@
                 android:layout_marginBottom="8dp"
                 android:autoLink="web"
                 android:paddingTop="16dp"
-                android:text="Which video player to use. VLC is open source and ad free, and supports youtube backwards compatibility. it can be installed from the app store at
-     https://play.google.com/store/apps/details?id=org.videolan.vlc Most players should work for Bitchute. Webview is mildly functional." />
+                android:text="Webview plays the embedded version from either sites player. VLC is a great open source ad free player. If you prefer another player on your system use default. Exo player is a decent option for Bitchute which supports background play. " />
 
             <TextView
                 android:id="@+id/textView3"
@@ -42,65 +40,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:autoLink="web"
-                android:text="To import,click the appropriate button and logon. Once logged in it should show a list of subscriptions and immediately start importing them." />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="37dp"
-                android:text="Youtube settings"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/load_youtube"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="load youtube subscriptions" />
-
-            <RadioGroup
-                android:id="@+id/youtubeplayerradioGroup"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:duplicateParentState="false"
-                android:layoutDirection="ltr"
-                android:layoutMode="clipBounds"
-                android:orientation="horizontal"
-                android:textDirection="ltr">
-
-
-                <RadioButton
-                    android:id="@+id/youtubeuse_vlc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="VLC" />
-
-                <RadioButton
-                    android:id="@+id/youtubeuse_exo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="exo " />
-
-                <RadioButton
-                    android:id="@+id/youtubeuse_webview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layoutDirection="ltr"
-                    android:text="web view" />
-
-                <RadioButton
-                    android:id="@+id/youtubeuse_default"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="System" />
-
-            </RadioGroup>
+                android:text="To import,click the appropriate button and logon. Once logged in it should show a list of your subscribed channels, then immediately start importing them. The first time " />
 
             <TextView
                 android:id="@+id/textView4"
@@ -159,14 +99,73 @@
                 android:layout_marginBottom="8dp"
                 android:text="load bitchute subscriptions" />
 
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:text="Youtube settings"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <RadioGroup
+                android:id="@+id/youtubeplayerradioGroup"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:duplicateParentState="false"
+                android:layoutDirection="ltr"
+                android:layoutMode="clipBounds"
+                android:orientation="horizontal"
+                android:textDirection="ltr">
+
+
+                <RadioButton
+                    android:id="@+id/youtubeuse_vlc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VLC" />
+
+                <RadioButton
+                    android:id="@+id/youtubeuse_exo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="exo " />
+
+                <RadioButton
+                    android:id="@+id/youtubeuse_webview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layoutDirection="ltr"
+                    android:text="web view" />
+
+                <RadioButton
+                    android:id="@+id/youtubeuse_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="System" />
+
+            </RadioGroup>
+
+            <Button
+                android:id="@+id/load_youtube"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="load youtube subscriptions" />
+
             <LinearLayout
+                android:id="@+id/feedsynclayout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView"
-                    android:layout_width="208dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
@@ -179,9 +178,61 @@
                     android:id="@+id/feed_age"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:inputType="textPersonName"
                     android:text="7" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/syncsettingslayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/backgroundsyncenabled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Background sync" />
+
+                <CheckBox
+                    android:id="@+id/wifisynconly"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Wi-Fi only" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/commentsenabled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="comments     " />
+
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/dissentercommentsenabled"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Dissenter" />
+
+                    <RadioButton
+                        android:id="@+id/kittencommentsenabled"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kittens" />
+                </RadioGroup>
             </LinearLayout>
 
         </LinearLayout>
