--- a/app/src/main/res/layout/smallvideolist.xml
+++ b/app/src/main/res/layout/smallvideolist.xml
@@ -30,20 +30,18 @@
 
         <TextView
             android:id="@+id/movieName2"
-            android:layout_width="214dp"
+            android:layout_width="match_parent"
             android:layout_height="75dp"
-            android:layout_below="@+id/thumbnail"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="false"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="172dp"
             android:layout_marginTop="35dp"
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:background="#80000000"
             android:elevation="200dp"
             android:maxLines="3"
-            android:padding="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="#FFFFFFFF"
             android:textSize="12sp"
@@ -51,15 +49,15 @@
 
         <TextView
             android:id="@+id/author2"
-            android:layout_width="214dp"
+            android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginLeft="172dp"
             android:layout_marginTop="0dp"
             android:background="#D0B95304"
             android:elevation="200dp"
             android:ems="10"
-            android:paddingLeft="8dp"
             android:text=""
             android:textColor="#FFEB3B"
             android:textStyle="bold" />
