--- a/app/src/main/res/layout/smallvideolist.xml
+++ b/app/src/main/res/layout/smallvideolist.xml
@@ -75,6 +75,21 @@
             android:elevation="200dp"
             android:visibility="visible" />
 
+        <TextView
+            android:id="@+id/videoviewcount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="2dp"
+            android:autoText="false"
+            android:background="#8BFFFFFF"
+            android:text="TextView"
+            android:textColor="#B5000000"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
