--- a/app/src/main/res/layout/smallvideolist.xml
+++ b/app/src/main/res/layout/smallvideolist.xml
@@ -40,7 +40,7 @@
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:background="#80000000"
-            android:elevation="200dp"
+            android:elevation="100dp"
             android:maxLines="3"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="#FFFFFFFF"
@@ -56,7 +56,7 @@
             android:layout_marginLeft="172dp"
             android:layout_marginTop="0dp"
             android:background="#D0B95304"
-            android:elevation="200dp"
+            android:elevation="100dp"
             android:ems="10"
             android:text=""
             android:textColor="#FFEB3B"
@@ -64,14 +64,14 @@
 
         <ImageView
             android:id="@+id/videoserviceicon2"
-            android:layout_width="37dp"
-            android:layout_height="28dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="137dp"
-            android:layout_marginTop="79dp"
-            android:layout_marginEnd="6dp"
-            android:layout_toStartOf="@+id/author2"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentBottom="false"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
             android:elevation="200dp"
             android:visibility="visible" />
 
@@ -79,13 +79,10 @@
             android:id="@+id/videoviewcount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="2dp"
-            android:autoText="false"
+            android:layout_alignStart="@+id/thumbnail2"
+            android:layout_alignParentBottom="true"
             android:background="#8BFFFFFF"
-            android:text="TextView"
+            android:elevation="200dp"
             android:textColor="#B5000000"
             android:textSize="14sp"
             android:textStyle="bold" />
