--- a/app/src/main/res/layout/fragment_video_properties.xml
+++ b/app/src/main/res/layout/fragment_video_properties.xml
@@ -13,29 +13,6 @@
         android:orientation="vertical">
 
 
-        <ImageView
-            android:id="@+id/thumbNailView"
-            android:layout_width="match_parent"
-            android:layout_height="240dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="2dp"
-            android:background="#FFFFFF"
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <TextView
-            android:id="@+id/video_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="TextView"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-
-
-
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -45,19 +22,29 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/video_description"
+                <ImageView
+                    android:id="@+id/thumbNailView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="16dp"
+                    android:layout_height="240dp"
                     android:layout_marginTop="4dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="16dp"
-                    android:autoLink="web|email"
+                    android:layout_marginBottom="2dp"
                     android:background="#FFFFFF"
-                    android:paddingLeft="4dp"
-                    android:textAlignment="textStart"
-                    android:textIsSelectable="true" />
+                    tools:srcCompat="@tools:sample/avatars" />
+
+                <TextView
+                    android:id="@+id/video_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="TextView"
+                    android:textAlignment="center"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <WebView
+                    android:id="@+id/videopropertieswebview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
                 <Button
                     android:id="@+id/closeButton"
